fails to hook kalloc_ext

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ example/open1_hook
 example/kernel_thread
 example/kaddr_of_port
 palera1n*
+/open1hookiOS15/.theos
+/xnuspytestiOS15/.theos/_/DEBIAN
+/open1hookiOS15/packages
+/xnuspytestiOS15/.theos
+/xnuspytestiOS15/packages
